add getAt and add method realization